onlyoffice/onlyoffice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice
  namespace: onlyoffice
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: onlyoffice
